--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <tr>
                     <td>GitHub Handle: {{userObj.login}}</td>
                 </tr>
+                <tr>
+                    <td># of followers: {{userObj.followers}}</td>
+                </tr>
             </table>
         </section>
     </main>
