--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html lang="en" ng-app="app">
 
 <head>
-
-    <!-- Meta-Information -->
     <title>GitHub Followers v1.6</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Vendor: Bootstrap Stylesheets -->
+    <!--Bootstrap latest compiled and minified CSS-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <!-- Our CSS Stylesheets-->
+    <!--Custom CSS-->
     <link rel="stylesheet" href="content/css/app.css">
 
 </head>
@@ -30,6 +26,7 @@
 
     <!--getfollowers module-->
     <script src="app/getFollowers/getFollowers.module.js"></script>
+    <script src="app/getFollowers/config.route.js"></script>
     <script src="app/getFollowers/getFollowers.controller.js"></script>
     <script src="app/getFollowers/getFollowers.service.js"></script>
 
