Rename & lowercase error text
-Fix any naming inconsistencies & convert error message to lowercase.

--- a/app/getFollowers/getFollowers.html
+++ b/app/getFollowers/getFollowers.html
@@ -1,7 +1,7 @@
 <main>
     <section class="section">
         <!-- Form for username entry with built-in Angular form controls -->
-        <form name="userForm" ng-submit="vm.fetchAll(vm.username)" novalidate>
+        <form name="userForm" ng-submit="vm.getAll(vm.username)" novalidate>
             <input name="usernameInput" ng-model="vm.username" id="username" type="text" autocomplete="off" required/>
             <button ng-disabled="!(userForm.$valid)" type="submit" class="btn btn-primary">Submit</button>
             <br/>
