--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>GitHub Followers v1.7</title>
+    <title>GitHub Followers v1.8</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,10 +24,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
 
-    <!--main app module-->
+    <!--Main app module-->
     <script src="app/app.module.js"></script>
 
-    <!--getfollowers module-->
+    <!--getFollowers module-->
     <script src="app/getFollowers/getFollowers.module.js"></script>
     <script src="app/getFollowers/config.route.js"></script>
     <script src="app/getFollowers/getFollowers.controller.js"></script>
