--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>GitHub Followers v1.9</title>
+    <title>GitHub Followers</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+
+    <!--Navbar directive that stays at the top of every page-->
+    <gf-navbar></gf-navbar>
 
     <!--Main content that changes based on route-->
     <div ng-view class="container"></div>
@@ -32,6 +35,10 @@
     <script src="app/getFollowers/config.route.js"></script>
     <script src="app/getFollowers/getFollowers.controller.js"></script>
     <script src="app/getFollowers/getFollowers.service.js"></script>
+    
+    <!--layout module-->
+    <script src="app/layout/layout.module.js"></script>
+    <script src="app/layout/navbar.directive.js"></script>
 
 </body>
 
