--- a/app/getFollowers/getFollowers.html
+++ b/app/getFollowers/getFollowers.html
@@ -1,13 +1,15 @@
 <main>
     <section class="section">
-        <!-- Form for username entry with built-in Angular form controls -->
-        <form name="userForm" ng-submit="vm.getAll(vm.username)" novalidate>
-            <input name="usernameInput" ng-model="vm.username" id="username" type="text" autocomplete="off" required/>
-            <button ng-disabled="!(userForm.$valid)" type="submit" class="btn btn-primary">Get</button>
-            <br/>
-            <label ng-show="!(userForm.$valid)" for="username">Please enter a GitHub username</label>
-            <label ng-show="vm.errorMessage" for="username">{{vm.errorMessage}}</label>
-        </form>
+        <div class="search-div">
+            <!-- Form for username entry with built-in Angular form controls -->
+            <form name="userForm" ng-submit="vm.getAll(vm.username)" novalidate>
+                <input name="usernameInput" ng-model="vm.username" id="username-input" type="text" autocomplete="off" required/>
+                <button ng-disabled="!(userForm.$valid)" type="submit" id="search-button" class="btn btn-primary">Get</button>
+                <br/>
+                <label ng-show="!(userForm.$valid)" id="enter-username-label" for="username-input">Please enter a GitHub username</label>
+                <label ng-show="vm.errorMessage" id="error-label" for="username-input">{{vm.errorMessage}}</label>
+            </form>
+        </div>
     </section>
     <section class="section">
         <div ng-show="vm.userObj.login" class="username-div">
