--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="content/css/app.css">
+    
+    <!--Favicon-->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 </head>
 
@@ -27,10 +30,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
 
-    <!--Main app module-->
+    <!--main app module-->
     <script src="app/app.module.js"></script>
 
-    <!--getFollowers module-->
+    <!--getfollowers module-->
     <script src="app/getFollowers/getFollowers.module.js"></script>
     <script src="app/getFollowers/config.route.js"></script>
     <script src="app/getFollowers/getFollowers.controller.js"></script>
